--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -1,3 +1,6 @@
+/* home page */
+
+/* top button row */
 .button_row {
   display: flex;
   justify-content: space-around;
@@ -12,6 +15,7 @@
   background: #f9b916;
 }
 
+/* left top banner */
 .sn_banner {
   display: flex;
   flex-wrap: wrap;
@@ -27,13 +31,15 @@
   margin: 0px;
 
   background: #f9b916;
-}
-/* The Student Network */
-.sn_banner {
+
+
+/* left top banner: font */
+
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
   font-size: 1.25rem;
+  /* font-size: 1rem; */
   line-height: 30px;
   /* or 111% */
 
@@ -42,14 +48,18 @@
   border: 1px solirgb(184, 150, 150);
 }
 
+
+/* center grid */
 .main_grid {
   position: absolute;
-  width: 800px;
+  width: 50%;
   height: 622px;
-  left: 20%;
+  left: 25%;
+  /* right: 20%; */
   top: 254px;
 }
 
+/* */
 .button_row {
   display: flex;
   justify-content: space-around;
@@ -62,4 +72,34 @@
   font-weight: bold;
 
   background: #f9b916;
+}
+
+@media only screen and (min-width: 992px) {
+
+  .sn_banner {
+
+  }
+
+  .main_grid {
+
+  }
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+
+  .sn_banner {
+    /* font-size: 1rem; */
+  }
+
+  .main_grid {
+
+  }
+
+}
+
+@media only screen and (max-width: 600px) {
+
+
+
 }
