--- a/src/MatchesAndRequests.module.css
+++ b/src/MatchesAndRequests.module.css
@@ -3,9 +3,9 @@
 
   text-align: left;
 
-  width: 25%;
-  left: 75%;
-  top: 305px;
+  width: 20%;
+  left: 80%;
+  top: 200px;
   overflow: hidden;
 
   border: 1px solid #000000;
@@ -15,4 +15,14 @@
   padding: 35px;
 
   background: #f9b916;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+
+  .matches_and_requests_box {
+    left: 75%;
+    width: 25%;
+
+  }
+
 }
